Refactored code base and initialized empty wishlist app

--- a/Pipfile
+++ b/Pipfile
@@ -35,6 +35,7 @@ django-celery-beat = "*"
 cloudinary = "*"
 pillow = "*"
 aiohttp = "*"
+psycopg = {extras = ["binary"], version = "*"}
 
 [dev-packages]
 
